# zwd-into-aurora

./: .gitignore  Dockerfile  Dockerfile_pytorch  LICENSE.txt  Makefile  NOTICE.md  README.md  config.py  create_zarr_zwdx.py  dataset_config.yaml  environment.yml  inference_direct.py  loss_config.yaml  plot_prediction_comparison.py  postprocessing_esfm.py  pyproject.toml  train_fsdp.py
.github/workflows/: ci.yaml
aurora/: __init__.py  batch.py  normalisation.py  normalization_stats_1979_2021.json  normalization_stats_1979_2021_newvariables.json  normalization_stats_aurora.json  rollout.py
aurora/model/: aurora.py  aurora_encoder_only.py  decoder.py  encoder.py  fourier.py  patchembed.py  perceiver.py  posencoding.py  smoe.py  swin3d.py
scripts/: export_era5_slt.py  torchcontainer_clariden.toml
scripts/inference/: inference_zwd_precip.sh  inference_zwd_precip_rollout.sh  merge_predictions.py
scripts/postprocess/: check_zarr_for_zwd.py  check_zarr_for_zwd_launch.sh  compare_zwd_integration.py  compare_zwd_integration_launch.sh
scripts/preprocess/: compute_mswep_6h_accumulation.py  submit_mswep_6h_acc.sh
scripts/training/: train_precip_without.sh  train_zwd.sh  train_zwd_precip.sh
tests/: test_precip_preprocessing.py
utils/: constants.py  dataset.py  gradient_logging.py  logging_utils.py  losses.py  metrics.py  model_freezer.py  set_stats.py  transform_data.py
